--- a/.github/workflows/nightly-automated-builds.yaml
+++ b/.github/workflows/nightly-automated-builds.yaml
@@ -1,6 +1,6 @@
 on:
   schedule:
-    - cron: "0 0 * * *" # Runs daily at midnight UTC
+    - cron: "0 0 * * *"
   workflow_dispatch: # Allows manual triggering of the workflow
 
 name: Nightly Automated Builds
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0 # Fetch all history for accurate tagging
+          fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Configure Git
@@ -23,49 +23,5 @@ jobs:
 
       - name: Create tags for target branches
         run: |
-          # Tag develop branch
-          git checkout develop
-
-          if [[ -z "${APP_BUILD_VERSION}" ]]; then
-              PKG_VERSION=$(cat ./package.json | grep '"version":' | sed 's/.*"version": "\([^-"]*\).*/\1/')
-              COMMIT_DATE=$(git log -1 --format=%cd --date=format:%m%d%H%M)
-              if [[ -n "$PKG_VERSION" && -n "$COMMIT_DATE" ]]; then
-                export APP_BUILD_VERSION=$PKG_VERSION-dev-$COMMIT_DATE
-              fi
-          fi
-
-          if [[ -n "$APP_BUILD_VERSION" ]]; then
-            TAG_NAME="v$APP_BUILD_VERSION"
-            echo "Creating tag for develop: $TAG_NAME"
-            git tag $TAG_NAME
-            git push origin $TAG_NAME
-          else
-            echo "Failed to generate APP_BUILD_VERSION for develop branch, skipping tag creation"
-          fi
-
-          # Tag latest RC branch
-          LATEST_RC=$(git branch -r | grep -E 'v[0-9.]+-(R|r)(C|c)' | sed 's/origin\///' | sort -V | tail -1 | xargs)
-
-          if [[ -n "$LATEST_RC" ]]; then
-            git checkout $LATEST_RC
-            unset APP_BUILD_VERSION # Reset for RC branch
-
-            if [[ -z "${APP_BUILD_VERSION}" ]]; then 
-              PKG_VERSION=$(cat ./package.json | grep '"version":' | sed 's/.*"version": "\([^-"]*\).*/\1/')
-              COMMIT_DATE=$(git log -1 --format=%cd --date=format:%m%d%H%M)
-              if [[ -n "$PKG_VERSION" && -n "$COMMIT_DATE" ]]; then
-                export APP_BUILD_VERSION=$PKG_VERSION-rc-$COMMIT_DATE
-              fi
-            fi
-            
-            if [[ -n "$APP_BUILD_VERSION" ]]; then
-              TAG_NAME="v$APP_BUILD_VERSION"
-              echo "Creating tag for latest RC: $TAG_NAME"
-              git tag $TAG_NAME
-              git push origin $TAG_NAME
-            else
-              echo "Failed to generate APP_BUILD_VERSION for RC branch, skipping tag creation"
-            fi
-          else
-            echo "No RC branches found"
-          fi
+          chmod +x .github/workflows/create-nightly-tags.sh
+          .github/workflows/create-nightly-tags.sh
