--- a/.github/workflows/nightly-automated-builds.yaml
+++ b/.github/workflows/nightly-automated-builds.yaml
@@ -1,6 +1,6 @@
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "30 0 * * *" # Testing - equivalent to 12:30 NZDT
   workflow_dispatch: # Allows manual triggering of the workflow
 
 name: Nightly Automated Builds
