--- a/.github/workflows/nightly-automated-builds.yaml
+++ b/.github/workflows/nightly-automated-builds.yaml
@@ -1,6 +1,6 @@
 on:
   schedule:
-    - cron: "*/5 * * * *" # Testing
+    - cron: "30 2 * * *"
   workflow_dispatch:
 
 name: Nightly Automated Builds
