--- a/.github/workflows/nightly-automated-builds.yaml
+++ b/.github/workflows/nightly-automated-builds.yaml
@@ -1,7 +1,7 @@
 on:
-  schedule:
-    - cron: "30 2 * * *"
   workflow_dispatch:
+  schedule:
+    - cron: "*/5 * * * *" # should run every 5 minutes
 
 name: Nightly Automated Builds
 
