--- a/.github/workflows/nightly-automated-builds.yaml
+++ b/.github/workflows/nightly-automated-builds.yaml
@@ -9,6 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    outputs:
+      CREATED_TAGS: ${{ steps.create_tags.outputs.CREATED_TAGS }}
+      AFFECTED_BRANCHES: ${{ steps.create_tags.outputs.AFFECTED_BRANCHES }}
+      HAS_TAGS: ${{ steps.create_tags.outputs.HAS_TAGS }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -21,13 +25,14 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Create tags for target branches
+        id: create_tags
         run: |
           chmod +x .github/workflows/create-nightly-tags.sh
           .github/workflows/create-nightly-tags.sh
 
   send-notifications:
     needs: create-tags
-    if: needs.create-tags.outputs.tags_created == 'true'
+    if: needs.create-tags.outputs.HAS_TAGS == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -37,8 +42,8 @@ jobs:
           TELEGRAM_RELEASE_BOT_KEY: ${{ secrets.TELEGRAM_RELEASE_BOT_KEY }}
           TELEGRAM_DEV_RELEASE_CHAT_ID: ${{ secrets.TELEGRAM_DEV_RELEASE_CHAT_ID }}
           TELEGRAM_RC_RELEASE_CHAT_ID: ${{ secrets.TELEGRAM_RC_RELEASE_CHAT_ID }}
-          CREATED_TAGS: ${{ needs.create-tags.outputs.created_tags }}
-          AFFECTED_BRANCHES: ${{ needs.create-tags.outputs.affected_branches }}
+          CREATED_TAGS: ${{ needs.create-tags.outputs.CREATED_TAGS }}
+          AFFECTED_BRANCHES: ${{ needs.create-tags.outputs.AFFECTED_BRANCHES }}
         run: |
-          chmod +x .github/workflows/send-telegram-notifications.sh
-          .github/workflows/send-telegram-notifications.sh
+          chmod +x .github/workflows/send-telegram-notification.sh
+          .github/workflows/send-telegram-notification.sh
