--- a/.github/workflows/nightly-automated-builds.yaml
+++ b/.github/workflows/nightly-automated-builds.yaml
@@ -2,7 +2,7 @@ name: Nightly Automated Builds
 on:
   workflow_dispatch:
   schedule:
-    - cron: "30 3 * * *" # should run every 15 minutes
+    - cron: "*/15 * * * *" # should run every 15 minutes
 
 jobs:
   create-tags:
