run every 20 mins

--- a/.github/workflows/nightly-automated-builds.yaml
+++ b/.github/workflows/nightly-automated-builds.yaml
@@ -2,7 +2,7 @@ name: Nightly Automated Builds
 on:
   workflow_dispatch:
   schedule:
-    - cron: "50 1 * * *" # should run every 20 minutes
+    - cron: "*/20 * * * *" # should run every 20 minutes
 
 jobs:
   create-tags:
