--- a/.github/workflows/nightly-automated-builds.yaml
+++ b/.github/workflows/nightly-automated-builds.yaml
@@ -1,8 +1,8 @@
 name: Nightly Automated Builds
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "*/1 * * * *" # should run every 1 minutes
+  # schedule:
+  #   - cron: "*/20 * * * *" # should run every 20 minutes
 
 jobs:
   create-tags:
