--- a/.github/workflows/android-build.yaml
+++ b/.github/workflows/android-build.yaml
@@ -38,5 +38,4 @@ jobs:
           BUILD_STATUS: ${{ job.status }}
           TAG_NAME: ${{ github.ref_name }}
         run: |
-          chmod +x .github/workflows/send-telegram-notification.sh
-          .github/workflows/send-telegram-notification.sh
+          bash .github/workflows/send-telegram-notification.sh
