--- a/.github/workflows/nightly-automated-builds.yaml
+++ b/.github/workflows/nightly-automated-builds.yaml
@@ -1,8 +1,8 @@
 name: Nightly Automated Builds
 on:
   workflow_dispatch:
-  # schedule:
-  #   - cron: "*/20 * * * *" # should run every 20 minutes
+  schedule:
+    - cron: "*/20 * * * *" # should run every 20 minutes
 
 jobs:
   create-tags:
@@ -26,8 +26,7 @@ jobs:
 
       - name: Create tags for target branches
         id: create_tags
-        run: |
-          bash .github/workflows/create-nightly-tags.sh
+        run: bash .github/workflows/create-nightly-tags.sh
 
   send-notifications:
     needs: create-tags
@@ -43,5 +42,4 @@ jobs:
           TELEGRAM_RC_RELEASE_CHAT_ID: ${{ secrets.TELEGRAM_RC_RELEASE_CHAT_ID }}
           CREATED_TAGS: ${{ needs.create-tags.outputs.CREATED_TAGS }}
           AFFECTED_BRANCHES: ${{ needs.create-tags.outputs.AFFECTED_BRANCHES }}
-        run: |
-          bash .github/workflows/send-telegram-notification.sh
+        run: bash .github/workflows/send-telegram-notification.sh
