--- a/.github/workflows/integrate-rc-to-develop.yaml
+++ b/.github/workflows/integrate-rc-to-develop.yaml
@@ -23,4 +23,6 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
       - name: Integrate RC to Develop
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: bash .github/workflows/integrate-rc-to-develop.sh
