--- a/.github/workflows/integrate-rc-to-develop.yaml
+++ b/.github/workflows/integrate-rc-to-develop.yaml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Configure Git
         run: |
@@ -24,5 +24,5 @@ jobs:
 
       - name: Integrate RC to Develop
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: bash .github/workflows/integrate-rc-to-develop.sh
